src/test/resources/Parser/SyntaxErrors/IncompatibleTypesWhile.front
class A {

    void test () {
        bool[][] b = new bool[2][2];
        while(b[1]);
    }

}